# derecho

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml  shell.nix
.github/workflows/: test.yml
benches/: disclosures_bench.rs
src/: gadgets.rs  lib.rs
src/building_blocks/: mod.rs
src/building_blocks/crh/: bowe_hopwood.rs  mod.rs  poseidon.rs
src/building_blocks/mt/: mod.rs
src/building_blocks/mt/merkle_sparse_tree/: constraints.rs  mod.rs
src/compiler/: circuit_specific_setup_compiler.rs  mod.rs
src/derecho/: data_structures.rs  disclosure.rs  mod.rs  state.rs  transfer.rs
src/fiat_shamir/: constraints.rs  mod.rs
src/fiat_shamir/poseidon/: constraints.rs  mod.rs
tests/: merkle_sparse_tree.rs  mnt4_298_ec_cycle.rs  mnt4_753_ec_cycle.rs  pallas_r1cs_nark.rs
