[package]
name = "derecho"
version = "0.1.0"
authors = [
    "Josh Beal <josh.beal@yale.edu>",
    "Ben Fisch <ben.fisch@yale.edu>"
]
description = "A library for proof-carrying disclosures."
repository = "https://github.com/joshbeal/derecho"
keywords = ["zero knowledge", "cryptography", "cryptocurrency"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[[bench]]
harness = false
name = "disclosures_bench"

################################# Dependencies ################################

[dependencies]
ark-serialize = { version = "^0.2.0", default-features = false, features = [ "derive" ] }
ark-ff = { version = "^0.2.0", default-features = false }
ark-ec = { version = "^0.2.0", default-features = false }
ark-poly = { version = "^0.2.0", default-features = false }

ark-std = { version = "^0.2.0", default-features = false }

ark-relations = { version = "^0.2.0", default-features = false }
ark-crypto-primitives = { git = "https://github.com/joshbeal/crypto-primitives", branch = "joshbeal/accumulation-experimental", default-features = false, features = [ "r1cs" ] }

ark-r1cs-std = { version = "^0.2.0", default-features = false }
ark-nonnative-field = { git = "https://github.com/arkworks-rs/nonnative", default-features = false, optional = true, rev = "d57dd4f83f7363e6310526a0a2533e4fc310564b" }

ark-snark = { version = "^0.2.0", default-features = false }
ark-sponge = { git = "https://github.com/arkworks-rs/sponge/", branch = "accumulation-experimental", default-features = false, features = [ "r1cs" ] }
ark-pcd = { git = "https://github.com/joshbeal/pcd", branch = "joshbeal/accumulation-experimental", default-features = false }
derivative = { version = "2.0", features = ["use_core"] }

tracing-subscriber = { version = "0.2", default-features = false, optional = true, features = ["registry"] }

ark-groth16 = { git = "https://github.com/joshbeal/groth16", branch = "joshbeal/accumulation-experimental", default-features = false, features = [ "r1cs" ] }
ark-poly-commit = { git = "https://github.com/joshbeal/poly-commit", branch = "joshbeal/accumulation-experimental", default-features = false, features = [ "r1cs" ] }

tracing = { version = "0.1", default-features = false, features = [ "attributes" ] }
rand_chacha = { version = "0.2.1", default-features = false }
digest = { version = "0.9" }
rayon = { version = "1", optional = true }

[dev-dependencies]
ark-ed-on-mnt4-298 = { version = "^0.2.0", default-features = false, features = [ "r1cs" ] }
ark-ed-on-mnt4-753 = { version = "^0.2.0", default-features = false, features = [ "r1cs" ] }
ark-mnt4-298 = { version = "^0.2.0", default-features = false, features = [ "r1cs" ] }
ark-mnt6-298 = { version = "^0.2.0", default-features = false, features = [ "r1cs" ] }
ark-mnt4-753 = { version = "^0.2.0", default-features = false, features = [ "curve", "r1cs" ] }
ark-mnt6-753 = { version = "^0.2.0", default-features = false, features = [ "r1cs" ] }
ark-pallas = { version = "^0.2.0", default-features = false, features = [ "curve", "r1cs" ] }
ark-vesta = { version = "^0.2.0", default-features = false, features = [ "r1cs" ] }
criterion = {version = "0.3.4", features = ["html_reports"]}

###############################################################################

################################## Features ###################################

[features]
default = ["std", "parallel"]
std = [ "ark-ff/std", "tracing-subscriber", "ark-ec/std", "ark-poly/std", "ark-std/std", "ark-serialize/std", "ark-poly-commit/std", "ark-crypto-primitives/std", "ark-r1cs-std/std", "ark-nonnative-field/std", "ark-groth16/std", "ark-relations/std", "ark-pcd/std"]
parallel = [ "std", "ark-ff/parallel", "ark-poly/parallel", "ark-std/parallel", "ark-ec/parallel", "ark-poly-commit/parallel", "ark-crypto-primitives/parallel", "ark-r1cs-std/parallel", "ark-groth16/parallel", "ark-pcd/parallel", "rayon"]
print-trace = [ "ark-std/print-trace" ]

###############################################################################

# Copied from Zexe
[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true
